--- a/app/styles/_scenes.scss
+++ b/app/styles/_scenes.scss
@@ -38,13 +38,14 @@
     height: 40px;
     object-fit: scale-down;
     mix-blend-mode: multiply;
+    justify-self: center;
     grid-row: 2 / 3;
   }
   .scene > .scene-text {
     grid-row: 1 / 2;
     grid-column: 1 / 12;
-    text-align: left;
-
+    text-align: center;
+    align-self: center;
   }
   .scene > .scene-toevoegen {
     grid-column: 1 / -1;
